# pips-solver-dancing-links

./: .gitmodules  justfile  main.py  mcc  mccw-example  mccw.py  pips-2025-11-04-mcc-weighted  pips-2025-11-05-mcc-weighted  pp  pp3  pp4  pp5  pp6  pyproject.toml  todo.md  xc-example-1-sudoku  xc-example-2-sudoku  xc-example-3-sudoku  xc-example-4-sudoku  xc.py
data/: 2025-08-18.json  2025-08-19.json  2025-08-20.json  2025-08-21.json  2025-08-22.json  2025-08-23.json  2025-08-24.json  2025-08-25.json  2025-08-26.json  2025-08-27.json  2025-08-28.json  2025-08-29.json  2025-08-30.json  2025-08-31.json  2025-09-01.json  2025-09-02.json  2025-09-03.json  2025-09-04.json  2025-09-05.json  2025-09-06.json  2025-09-07.json  2025-09-08.json  2025-09-09.json  2025-09-10.json  2025-09-11.json  2025-09-12.json  2025-09-13.json  2025-09-14.json  2025-09-15.json  2025-09-16.json  2025-09-17.json  2025-09-18.json  2025-09-19.json  2025-09-20.json  2025-09-21.json  2025-09-22.json  2025-09-23.json  2025-09-24.json  2025-09-25.json  2025-09-26.json  (+67 more)
generated-mcc-instances/: 2025-08-20-hard  2025-08-23-hard  2025-09-02-hard  2025-09-03-hard  2025-09-04-hard  2025-09-05-hard  2025-09-06-hard  2025-09-07-hard  2025-09-08-hard  2025-09-09-easy  2025-09-09-hard  2025-09-09-medium  2025-09-10-hard  2025-09-11-hard  2025-09-15-easy  2025-09-15-hard  2025-09-24-hard  2025-09-29-easy  2025-09-30-hard  2025-10-05-hard  2025-10-09-hard  2025-10-10-hard  2025-10-13-medium  2025-10-14-easy  2025-10-14-hard  2025-10-14-medium  2025-10-16-hard  2025-10-18-hard  2025-10-20-easy  2025-10-20-hard  (+50 more)
(+310 files in other folders)
